# vision-transformer-maze-agent

./: pyproject.toml  readme.md
config/: base.toml
data/: dataloader.py  dummy_maze_gen.py  generator.py  processor.py
maze_dataset/: dataset.py
models/: layers.py  model.py
scripts/: infer.py  train.py
tests/: test_contract.py  test_determinism.py  test_layers.py
